--- a/doc_agent/frontend/index.html
+++ b/doc_agent/frontend/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <!-- Logo -->
+    <link rel="icon" type="image/png" href="Doc-Logo.png" />
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -10,8 +12,10 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Title -->
     <title>Doc Ai</title>
   </head>
+  <!-- Body -->
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
